--- a/contact.html
+++ b/contact.html
@@ -10,5 +10,13 @@
 
     <h1>Contact Page</h1>
     
+    <h1>Contact Page1</h1>
+    <h1>Contact Page2</h1>
+    <h1>Contact Page3</h1>
+    <h1>Contact Page4</h1>
+    <h1>Contact Page5</h1>
+    <h1>Contact Page6</h1>
+    <h1>Contact Page7</h1>
+    
 </body>
 </html>
